src/snapshots/saltnitor__ui__tests__tuner_page_1.snap
---
source: src/ui.rs
expression: "render(&mut app, 100, 30)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 30 },
    content: [
        "┌ Fixture GPU 12GB VRAM Saturatio 6.50 / 12.0 GB ┐┌ Fixture CPU 8-Core (Current Load: 93%) ────────┐",
        "│████████████████████████ █                      ││            ▂▅▇           ▂▄▆           ▁▃▆     │",
        "└────────────────────────────────────────────────┘│        ▁▄▆████       ▁▃▅████        ▂▅▇███     │",
        "┌ DDR5 System RAM Spillover ──── 12.25 / 32.0 GB ┐│     ▃▅▇███████    ▂▄▇███████    ▁▄▆███████    ▁│",
        "│██████████████████                              ││ ▂▄▆███████████▁▃▆███████████ ▃▅▇██████████ ▂▄▇█│",
        "└───────────────────┌ router.ini Tuner [Page 1/3] ─────────────────────────────┐───────────────────┘",
        "┌ Intelligent Log An│                                                          │t 8080: LISTENING] ┐",
        "│   router started  │           --- [ PAGE 1: COMPUTE & MEMORY ] ---           │                   │",
        "│   model A_STD load│                                                          │                   │",
        "│>> request served  │        GPU Layers (ngl):        33        [< / >]        │                   │",
        "│                   │        Context Size (ctx):      8192      [< / >]        │                   │",
        "│                   │        CPU Threads (threads):   15        [< / >]        │                   │",
        "│                   │        Batch Size (n_batch):    512       [< / >]        │                   │",
        "│                   │        Parallel Slots (np):     1         [< / >]        │                   │",
        "│                   │        Flash Attention:         OFF       [< / >]        │                   │",
        "│                   │        Memory Lock (mlock):     OFF       [< / >]        │                   │",
        "│                   │        No Mem Map (no_mmap):    OFF       [< / >]        │                   │",
        "│                   │        KV Cache (K-Type):       f16       [< / >]        │                   │",
        "│                   │        KV Cache (V-Type):       f16       [< / >]        │                   │",
        "│                   │                                                          │                   │",
        "│                   │                                                          │                   │",
        "└───────────────────│                                                          │───────────────────┘",
        "┌ API Interrogator ─│                                                          │───[Target: A_STD] ┐",
        "│> {"model": "None",│                                                          │                   │",
        "│TTFT: n/a | PP: n/a└[TAB] Next Page    |    [ENTER] Apply    |    [ESC] Cancel┘                   │",
        "│                                                                                                  │",
        "└─────────────────────────────────────────────────────────── [Tab] Hot-Swap | [Press 'i' to focus] ┘",
        "┌──────────────────────────────────────────────────────────────────────────────────────────────────┐",
        "│                [q] Quit  | [h] Help Menu  | [t] Deep Tuner  | [Esc] Close / Unfocus              │",
        "└──────────────────────────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 25, y: 1, fg: Reset, bg: Green, underline: Reset, modifier: BOLD,
        x: 26, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 49, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 1, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 2, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 3, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 49, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 4, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 5, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 6, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 6, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 97, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 7, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 7, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 7, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 69, y: 7, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 8, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 8, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Cyan, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 20, y: 9, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 9, fg: Black, bg: Yellow, underline: Reset, modifier: BOLD,
        x: 73, y: 9, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 9, fg: Cyan, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 99, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 10, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 10, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 10, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 11, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 11, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 11, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 12, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 12, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 12, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 13, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 13, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 13, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 14, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 14, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 14, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 15, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 15, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 15, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 16, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 16, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 16, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 17, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 17, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 17, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 18, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 18, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 18, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 19, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 20, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 21, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 22, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 22, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 22, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 92, y: 22, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 97, y: 22, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 3, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 23, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 24, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 24, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 24, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 24, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 28, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 28, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 28, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 33, y: 28, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 28, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 50, y: 28, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 28, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 70, y: 28, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
